<resources>
    <string name="app_name">Piscicultura</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AppName">Piscicultura Canoas</string>
    <string name="Entrar">Entrar</string>
    <string name="ExibirSenha">Exibir Senha</string>
    <string name="ExibirSenhas">Exibir Senhas</string>
    <string name="Senha">Senha</string>
    <string name="Usuario">Usuário</string>
    <string name="title_activity_main">Piscicultura Canoas</string>
    <string name="title_activity_usuario">Piscicultura Canoas</string>
    <string name="GerenciarUsuarios">Gerenciar Usuários</string>
    <string name="AdicionarUsuario">Adicionar Usuário</string>
    <string name="EditarUsuario">Editar Usuário</string>
    <string name="EditarFornecedor">Editar Fornecedor</string>
    <string name="title_activity_usuario_adicionar">Piscicultura Canoas</string>
    <string name="Nome">Nome</string>
    <string name="Nivel">Nível</string>
    <string name="Estado">Estado</string>
    <string name="title_activity_usuario_listar">Piscicultura Canoas</string>
    <string name="title_activity_fornecedor">Piscicultura Canoas</string>
    <string name="title_activity_fornecedor_listar">Piscicultura Canoas</string>
    <string name="title_activity_fornecedor_adicionar">Piscicultura Canoas</string>
    <string name="title_activity_usuario_alterar_senha">Piscicultura Canoas</string>
    <string name="AlterarSenha">Alterar Senha</string>
    <string name="SenhaAtual">Senha Atual</string>
    <string name="NovaSenha">Nova Senha</string>
    <string name="ConfirmeANovaSEnha">Confirme A Nova Senha</string>
    <string name="GerenciarFornecedores">Gerenciar Fornecedores</string>
    <string name="AdicionarFornecedor">Adicionar Fornecedor</string>
    <string name="CpfCnpj">CPF / CNPJ</string>
    <string name="Email">E-Mail</string>
    <string name="Telefone">Telefone</string>
    <string name="Contato">Contato</string>
    <string name="title_activity_lote_especie">Piscicultura Canoas</string>
    <string name="GerenciarEspecies">Gerenciar Espécies</string>
    <string name="AdicionarEspecie">Adicionar Espécie</string>
    <string name="EditarEspecie">Editar Espécie</string>
    <string name="title_activity_lote_especie_listar">Piscicultura Canoas</string>
    <string name="title_activity_especie_adicionar">Piscicultura Canoas</string>
    <string name="Especie">Especie</string>
    <string name="title_activity_lote">Piscicultura Canoas</string>
    <string name="AdicionarLote">Adicionar Lote</string>
    <string name="GerenciarLotes">Gerenciar Lotes</string>
    <string name="AdministrarLote">Administrar Lote</string>
    <string name="LogoLote">Logo Lote</string>
    <string name="Numero">Número</string>
    <string name="Fornecedor">Fornecedor</string>
    <string name="Individuos">Indivíduos</string>
    <string name="Data">Data</string>
    <string name="title_activity_lote_adicionar">Piscicultura Canoas</string>
    <string name="title_activity_tanque_alocar">Piscicultura Canoas</string>
    <string name="title_activity_lote_gerenciar">Piscicultura Canoas</string>
    <string name="title_activity_lote_listar">Piscicultura Canoas</string>
    <string name="EditarLote">Editar Lote</string>
    <string name="Editar">Editar</string>
    <string name="AlocarTanque">Alocar Tanque</string>
    <string name="AlocarTanques">Alocar Tanques</string>
    <string name="Tanque">Tanques</string>
    <string name="lote">Lotes</string>
</resources>
