<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AppName"
        android:id="@+id/lblAppName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExibirSenha"
        android:id="@+id/swExibe"
        android:layout_above="@+id/btnEntrar"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Entrar"
        android:id="@+id/btnEntrar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_blue_dark"
        android:background="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtSenha"
        android:layout_above="@+id/swExibe"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/swExibe"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Senha"
        android:id="@+id/lblSenha"
        android:layout_above="@+id/txtSenha"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUsuario"
        android:layout_above="@+id/lblSenha"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/txtSenha"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Usuario"
        android:id="@+id/lblUsuario"
        android:layout_above="@+id/txtUsuario"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/tilapia"
        android:layout_above="@+id/lblUsuario"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
