<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brunotonia.piscicultura.view.TanqueAlocarActivity"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AlocarTanques"
        android:id="@+id/lblTitulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Tanque"
        android:id="@+id/lblTanque"
        android:layout_below="@+id/lblTitulo"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="50dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnTanque"
        android:layout_below="@+id/lblTanque"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Individuos"
        android:id="@+id/lblIndividuos"
        android:layout_below="@+id/spnTanque"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtIndividuos"
        android:layout_below="@+id/lblIndividuos"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/lblRestantes"
        android:layout_below="@+id/txtIndividuos"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AlocarTanque"
        android:id="@+id/btnAdicionar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/txtIndividuos"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark" />

</RelativeLayout>
