<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brunotonia.piscicultura.view.UsuarioAlterarSenhaActivity"
    android:background="@android:color/white"
    android:id="@+id/swExibe">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AlterarSenha"
        android:id="@+id/lblTitulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SenhaAtual"
        android:id="@+id/lblSenha"
        android:layout_below="@+id/lblTitulo"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtSenha"
        android:layout_below="@+id/lblSenha"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/NovaSenha"
        android:id="@+id/lblNovaSenha"
        android:layout_below="@+id/txtSenha"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtNovaSenha"
        android:layout_below="@+id/lblNovaSenha"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/txtSenha"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ConfirmeANovaSEnha"
        android:id="@+id/lblNovaSenha2"
        android:layout_below="@+id/txtNovaSenha"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtNovaSenha2"
        android:layout_below="@+id/lblNovaSenha2"
        android:layout_alignEnd="@+id/txtNovaSenha"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExibirSenhas"
        android:id="@+id/switch1"
        android:layout_below="@+id/txtNovaSenha2"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AlterarSenha"
        android:id="@+id/btnAdicionar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white" />
</RelativeLayout>
