<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brunotonia.piscicultura.view.FornecedorAdicionarActivity"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AdicionarFornecedor"
        android:id="@+id/lblTitulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Nome"
        android:id="@+id/lblNome"
        android:layout_below="@+id/lblTitulo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtNome"
        android:layout_below="@+id/lblNome"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CpfCnpj"
        android:id="@+id/lblCPF"
        android:layout_below="@+id/txtNome"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtCPF"
        android:layout_below="@+id/lblCPF"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/txtNome"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Email"
        android:id="@+id/lblEmail"
        android:layout_below="@+id/txtCPF"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:layout_below="@+id/lblEmail"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/txtCPF"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Telefone"
        android:id="@+id/lblTelefone"
        android:layout_below="@+id/txtEmail"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtDdd"
        android:layout_below="@+id/lblTelefone"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lblTelefone"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtTelefone"
        android:layout_marginRight="5dp"
        android:layout_alignTop="@+id/txtDdd"
        android:layout_alignEnd="@+id/txtEmail"
        android:layout_toEndOf="@+id/txtDdd"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Contato"
        android:id="@+id/lblContato"
        android:layout_below="@+id/txtDdd"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtContato"
        android:layout_below="@+id/lblContato"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/txtTelefone"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AdicionarFornecedor"
        android:id="@+id/btnAdicionar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark" />

</RelativeLayout>
